nav part 1 update skeleton built

--- a/home.html
+++ b/home.html
@@ -5,6 +5,26 @@
         <title>Yu Yu Hakusho</title>
     </head>
     <body>
-        <h1 class="title">Yu Yu Hakusho!</h1>
+        <header>
+            <nav>
+                <ul>
+                    <li>
+                        Anime
+                    </li>
+                    <li>
+                        Manga
+                    </li>
+                    <li>
+                        Characters
+                    </li>
+                    <li>
+                        Villians
+                    </li>
+                    <li>
+                        Arcs
+                    </li>
+                </ul>
+            </nav>
+        </header>
     </body>
 </html>
